# tether-midi-mediator

./: Cargo.toml  README.md  dist-workspace.toml  midi-widgets.json
mappings/: knobs.json
src/: gui.rs  main.rs  mediation.rs  midi_interface.rs  settings.rs  tether_interface.rs
src/mediation/: mappings.rs  messages.rs  mod.rs
wix/: main.wxs
