[package]
name = "tether-midi-mediator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
eframe = "0.22.0"
egui = "0.22.0"
env_logger = "0.10.0"
log = "0.4.18"
midi-msg = "0.4.0"
midir = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
rmp-serde = "1.1.1"
circular-buffer = "0.1.1"
anyhow = "1.0.71"
tether-agent = "0.12.1"
