[package]
name = "tether-midi-mediator"
description = "MIDI to Tether messages"
repository = "https://github.com/RandomStudio/tether-midi-mediator.git"
version = "0.2.0"
edition = "2021"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "tether-midi"
path = "src/main.rs"

[dependencies]
#anyhow = "1.0.71"
clap = { version = "4.1.1", features = ["derive"] }
eframe = "0.22.0"
egui = "0.22.0"
env_logger = "0.10.0"
log = "0.4.18"
midi-msg = "0.4.0"
midir = "0.9.1"
tether-agent = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
circular-buffer = "0.1.1"
anyhow = "1.0.71"
